# python-sciread

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  1706.03762v5-short.txt  1706.03762v5.txt  AGENTS.md  AUTHORS.rst  CHANGELOG.rst  CLAUDE.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  example_usage.py  pyproject.toml  pytest.ini  simple_test.py  test_agent.py  test_discussion_system.py  test_model_fix.py  test_rag_integration.py  test_simple_agent.py  test_vector_search.py  tox.ini
.github/workflows/: github-actions.yml
ci/: bootstrap.py
ci/templates/.github/workflows/: github-actions.yml
config/: sciread.toml
docs/: agent_systems.md  conf.py  contributing.rst  installation.rst  readme.rst  usage.rst
docs/reference/: index.rst  sciread.rst
examples/: agent_usage.py
src/sciread/: __init__.py  __main__.py  cli.py  config.py  core.py  logging_config.py
src/sciread/agent/: __init__.py  consensus_builder.py  coordinate_agent.py  discussion_agent.py  document_agent.py  error_handling.py  factory.py  personality_agents.py  prompts.py  rag_react_agent.py  react_agent.py  react_models.py  section_selection.py  simple_agent.py  task_queue.py  text_processor.py  text_utils.py  tool_agent.py
src/sciread/agent/coordinate/: __init__.py  agent.py  executor.py  planner.py  prompts.py  runtime.py  synthesis.py
src/sciread/agent/discussion/: __init__.py  agent.py  consensus.py  models.py  personalities.py  task_models.py  task_queue.py  tools.py
src/sciread/agent/models/: __init__.py  coordinate_models.py  discussion_models.py  rag_react_models.py  react_models.py  task_models.py
src/sciread/agent/prompts/: __init__.py  consensus.py  coordinate.py  discussion.py  personalities.py  rag_react.py  react.py  simple.py
src/sciread/agent/react/: __init__.py  agent.py  models.py  prompts.py
src/sciread/agent/search_react/: __init__.py  agent.py  models.py  prompts.py
src/sciread/agent/shared/: __init__.py  error_handling.py
src/sciread/agent/simple/: __init__.py  agent.py  models.py  prompts.py
src/sciread/agent/tools/: __init__.py  task_tools.py
src/sciread/agents/: __init__.py  base.py  factory.py  multi_agent_system.py  prompts.py  schemas.py  simple_agent.py  tool_calling_agent.py
src/sciread/application/: __init__.py  analysis_service.py
src/sciread/application/use_cases/: __init__.py  common.py  coordinate.py  discussion.py  react.py  search_react.py  simple.py
src/sciread/document/: __init__.py  document.py  document_builder.py  document_renderers.py  external_clients.py  factory.py  mineru_cache.py  models.py  retrieval_service.py  runtime.py  section_resolver.py  state.py  vector_index.py
src/sciread/document/ingestion/: __init__.py  external_clients.py  mineru_cache.py
src/sciread/document/loaders/: __init__.py  base.py  pdf_loader.py  txt_loader.py
src/sciread/document/retrieval/: __init__.py  evidence.py  models.py  search.py  service.py  vector_index.py
src/sciread/document_ingestion/: __init__.py  external_clients.py  mineru_cache.py
src/sciread/document_structure/: __init__.py  builder.py  chunking.py  document.py  factory.py  models.py  persistence.py  renderers.py  sections.py
src/sciread/embedding_provider/: __init__.py  base.py  factory.py  lmstudio.py  ollama.py  siliconflow.py
src/sciread/entrypoints/: __init__.py  cli.py
src/sciread/llm_provider/: __init__.py  deepseek.py  factory.py  lmstudio.py  ollama.py  volcengine.py  zhipu.py
src/sciread/platform/: __init__.py  config.py  rich_output.py
src/sciread/providers/: __init__.py
src/sciread/rerank_provider/: __init__.py  base.py  factory.py  siliconflow.py
src/sciread/retrieval/: __init__.py  service.py  vector_index.py
tests/: conftest.py  fakes.py  test_agent_smoke.py  test_agents.py  test_application_use_cases.py  test_cli.py  test_coordinate_agent.py  test_core.py  test_discussion_agent.py  test_discussion_consensus.py  test_discussion_logging.py  test_discussion_section_selection.py  test_discussion_task_queue.py  test_discussion_task_tools.py  test_embedding_factory.py  test_error_handling.py  test_lmstudio_client.py  test_main.py  test_ollama_client.py  test_platform_logging.py  test_prompt_builders.py  test_react_agent.py  test_regex_section_splitter.py  test_rich_output.py  test_search_react_agent.py  test_siliconflow_client.py  test_simple_agent_api.py  test_text_utils.py  test_topic_flow.py
tests/contracts/: test_loader_contracts.py  test_provider_contracts.py
tests/fixtures/: sample_paper.md  sample_paper.txt
tests/integration/: test_document_pipeline.py
tests/system/: test_cli_smoke.py
tests/test_document/: __init__.py  conftest.py  test_builder.py  test_document.py  test_evidence_retriever.py  test_markdown_splitter.py  test_mineru_ingestion.py  test_models.py  test_persistence.py  test_rag.py  test_renderers.py  test_retrieval_search.py  test_retrieval_service.py  test_section_tree.py  test_sections.py  test_semantic_splitter.py  test_splitter_base.py  test_unified_sections.py  test_vector_index.py
tests/test_document/test_loaders/: test_base.py  test_pdf_loader.py  test_txt_loader.py
tests/test_document/test_splitters/: test_fixed_size.py  test_hybrid.py  test_rule_based.py
tests/test_embedding_provider/: test_base.py
tests/test_llm_provider/: __init__.py  conftest.py  test_config.py  test_deepseek.py  test_factory.py  test_integration.py  test_lmstudio.py  test_ollama.py  test_volcengine.py  test_zhipu.py
tests/test_providers/: __init__.py  test_removed_legacy_imports.py
tests/test_providers/test_embedding/: test_base.py  test_factory.py  test_lmstudio_client.py  test_ollama_client.py  test_siliconflow_client.py
tests/test_providers/test_llm/: __init__.py  conftest.py  test_config.py  test_deepseek.py  test_factory.py  test_integration.py  test_lmstudio.py  test_ollama.py  test_volcengine.py
tests/test_providers/test_rerank/: __init__.py  test_factory.py  test_siliconflow.py
tests/test_rerank_provider/: test_factory.py  test_siliconflow.py
(+55 files in other folders)
