[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sciread"
version = "1.1.0"
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
description = "Understand paper with LLM-driven agents."
authors = [
    { name = "Zhenghao Wu", email = "hi@ecwu.xyz" },
]
classifiers = [
    # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities",
]
keywords = []
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=1.107.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "toml>=0.10.2",
    "pypdf>=6.13.3",
    "pdfplumber>=0.11.10",
    "chardet>=7.4.3",
    "loguru>=0.7.3",
    "regex>=2026.5.9",
    "chromadb>=1.5.9",
    "rich>=15.0.0",
    "bumpversion>=0.6.0",
]

[dependency-groups]
test = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
dev = [
    "ruff>=0.15.17",
    "pre-commit>=4.6.0",
]

[project.scripts]
sciread = "sciread.entrypoints.cli:run"

[project.urls]
"Sources" = "https://gitea.ecwu.xyz/ecwu/python-sciread"
"Documentation" = "https://python-sciread.readthedocs.io/"
"Changelog" = "https://python-sciread.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://gitea.ecwu.xyz/ecwu/python-sciread/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sciread"]

[tool.ruff]
extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"ci/*" = ["S"]

[tool.ruff.lint]
ignore = [
    "RUF001",  # ruff-specific rules ambiguous-unicode-character-string
    "RUF006",  # store a reference to the return value of asyncio.create_task
    "S101",    # flake8-bandit assert
    "S110",    # try-except-pass detected
    "S308",    # flake8-bandit suspicious-mark-safe-usage
    "S603",    # flake8-bandit subprocess-without-shell-equals-true
    "S607",    # flake8-bandit start-process-with-partial-path
    "S608",    # possible SQL injection vector through string-based query construction
    "E501",    # pycodestyle line-too-long
    "PLC0415", # import should be at the top of the file
]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "E",   # pycodestyle errors
    "EXE", # flake8-executable
    "F",   # pyflakes
    "I",   # isort
    "INT", # flake8-gettext
    "PIE", # flake8-pie
    "PLC", # pylint convention
    "PLE", # pylint errors
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RSE", # flake8-raise
    "RUF", # ruff-specific rules
    "S",   # flake8-bandit
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
forced-separate = ["conftest"]
force-single-line = true

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
norecursedirs = ["migrations"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "-ra --strict-markers --tb=short"
markers = [
    "asyncio: marks tests as async",
    "unit: pure function, model, and error-branch tests",
    "component: tests that exercise one subsystem across several internal modules",
    "integration: cross-boundary tests using fake or mocked providers",
    "system: end-to-end tests through public entrypoints without external services",
    "contracts: provider, loader, and retriever interface contract tests",
    "live: tests that call real external services or local model servers",
    "slow: tests that are intentionally slower than the default CI suite",
]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::pytest.PytestUnraisableExceptionWarning:_pytest.unraisableexception",
    "ignore::ResourceWarning",
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["sciread", "tests"]
parallel = true

[tool.coverage.report]
show_missing = true
precision = 2
omit = ["*migrations*"]
